--- a/_config.yml
+++ b/_config.yml
@@ -15,12 +15,12 @@ remote_theme             : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "default", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
+locale                   : "ko-KR"
 title                    : "yonsei-ConU.github.io"
 title_separator          : "-"
 subtitle                 : "수학, 컴퓨터 과학에 관한 지식을 저장하는 곳"
 name                     : "yonsei-ConU"
-description              : "An amazing website."
+description              : "지리는 웹사이트"
 url                      : "https://yonsei-ConU.github.io"
 # baseurl                : # the subpath of your site, e.g. "/blog"
 repository               : yonsei-ConU/yonsei-ConU.github.io
@@ -112,9 +112,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Jaeyeol Lee"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
+  bio              : "Yonsei University Dept. of Computer Science"
   location         : "Somewhere"
   email            :
   links:
