--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,7 @@ author:
   name             : "Jaeyeol Lee"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Yonsei University Dept. of Computer Science"
-  location         : "Somewhere"
+  location         : "Seoul, Korea"
   email            :
   links:
     - label: "Email"
@@ -135,7 +135,7 @@ author:
       # url: "https://github.com/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+      url: "https://www.instagram.com/jae__yl/"
 
 # Site Footer
 footer:
@@ -157,7 +157,7 @@ footer:
       # url:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url:
+      url: "https://www.instagram.com/jae__yl/"
 
 
 # Reading Files
