--- a/_config.yml
+++ b/_config.yml
@@ -313,12 +313,11 @@ compress_html:
 defaults:
   # _posts
   - scope:
-      path: ""
+      path: "_posts"
       type: posts
     values:
       layout: single
       author_profile: true
-      read_time: true
       comments: # true
       share: true
       related: true
